<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorTitle"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/btn_add_customer_back"
                android:layout_width="40dp"
                android:layout_height="match_parent"

                android:gravity="center">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/baseline_arrow_back_white_24dp"

                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/add_contact"
                    android:textColor="@android:color/background_light"
                    android:textSize="10pt"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_add_customer_save_top"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right">

                <ImageView

                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/baseline_save_white_24dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/shape"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="+"
                        android:textColor="@color/colorGray"
                        android:textSize="30dp"

                        />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/edittextround"

            android:layout_marginLeft="10dp"

            android:paddingStart="5pt"
            android:layout_marginRight="10dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/baseline_person_black_24dp" />
            <!--android:background="@color/colorGray"-->

            <EditText
                android:layout_marginLeft="10dp"
                android:id="@+id/add_customer_username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:hint="@string/user_name"

                />



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/edittextround"

            android:layout_marginLeft="10dp"

            android:paddingStart="5pt"
            android:layout_marginRight="10dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/baseline_phone_black_24dp" />
            <!--android:background="@color/colorGray"-->

            <EditText
                android:layout_marginLeft="10dp"
                android:id="@+id/add_customer_phone_number"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:hint="@string/phone_number"


                />



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/edittextround"

            android:layout_marginLeft="10dp"

            android:paddingStart="5pt"
            android:layout_marginRight="10dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/baseline_work_black_24dp" />
            <!--android:background="@color/colorGray"-->

            <EditText
                android:layout_marginLeft="10dp"
                android:id="@+id/add_customer_position"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:hint="@string/position"

                />



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/colorTitle"
            android:layout_marginLeft="10dp"

            android:layout_marginRight="10dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            >

            <Button
                android:id="@+id/btn_add_customer_save_bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorTitle"
                android:text="@string/save"
                android:textColor="#ffffff"
                android:textSize="10pt"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
